environment and connection changes

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yZ4Ay9uS3KgP06pDoOTzFpitJX7k+KnQRcYHJucgi/w=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,26 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=prep
+DB_HOST=165.232.128.98
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=prep
+DB_USERNAME=bd1
+DB_PASSWORD=losbolsillosdePepit0songrandes#
+
+DB_CONNECTION_SECOND=ine
+DB_HOST_SECOND=sistvotbd4.czz4xvp3nhqu.us-east-1.rds.amazonaws.com
+DB_PORT_SECOND=3306
+DB_DATABASE_SECOND=ine
+DB_USERNAME_SECOND=admin
+DB_PASSWORD_SECOND=lahojadelaPlant4esverde#
+
+DB_CONNECTION_THIRD=trib
+DB_HOST_THIRD=44.202.249.140
+DB_PORT_THIRD=3306
+DB_DATABASE_THIRD=trib
+DB_USERNAME_THIRD=bd3
+DB_PASSWORD_THIRD=laHoj4noesdecolores$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
