--- a/.env
+++ b/.env
@@ -13,14 +13,14 @@ DB_HOST=165.232.128.98
 DB_PORT=3306
 DB_DATABASE=prep
 DB_USERNAME=bd1
-DB_PASSWORD=losbolsillosdePepit0songrandes#
+DB_PASSWORD="losbolsillosdePepit0songrandes#"
 
 DB_CONNECTION_SECOND=ine
 DB_HOST_SECOND=sistvotbd4.czz4xvp3nhqu.us-east-1.rds.amazonaws.com
 DB_PORT_SECOND=3306
 DB_DATABASE_SECOND=ine
 DB_USERNAME_SECOND=admin
-DB_PASSWORD_SECOND=lahojadelaPlant4esverde#
+DB_PASSWORD_SECOND="lahojadelaPlant4esverde#"
 
 DB_CONNECTION_THIRD=trib
 DB_HOST_THIRD=44.202.249.140
